--- a/public/AgodaPartnerVerification.html
+++ b/public/AgodaPartnerVerification.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <meta name="agd-partner-manual-verification" />
     <title>Agoda Partner Site Verification</title>
-</head>
-<body>
+  </head>
+  <body>
     agoda-partner-site-verification: AgodaPartnerVerification.html
-</body>
+  </body>
 </html>
